# EventHorizon

./: .gitignore  ACCEPTANCE_CRITERIA_FULFILLMENT.md  README.md  SLACK_IMPLEMENTATION_SUMMARY.md  TODO.md  docker-compose.yml  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: backend-action-integration-tests.yml  snyk.yml
backend/: .env.example  SLACK_QUICKSTART.md  package.json
backend/__tests__/: action.integration.test.js  crypto.test.js  deduplication.test.js  dlq.service.test.js  executionLog.controller.test.js  executionLog.service.test.js  headerBuilder.test.js  healthMonitor.service.test.js  killSwitch.controller.test.js  killSwitch.service.test.js  logger.test.js  oauth2.service.test.js  pagerduty.service.test.js  queue.test.js  rotation.test.js  scaler.test.js  securityReport.test.js  slackAppHandler.test.js  systemHealth.test.js  tracing.test.js  trigger.controller.test.js  trigger.workflow.test.js  webhook.service.test.js  workflow.processor.test.js  workflow.service.test.js
backend/docs/: custom-headers.md
backend/kibana/: eventhorizon-logs-dashboard.ndjson
backend/logstash/: eventhorizon_pipeline.conf
backend/scripts/: migrate-mongo-to-timescale.js  (+1 more)
contracts/: Cargo.toml
contracts/burnable_token/: Cargo.toml
contracts/burnable_token/src/: lib.rs  test.rs
contracts/burnable_token/test_snapshots/test/: burn_from_respects_allowance.1.json  burn_window_resets_after_window_seconds.1.json  mint_and_burn_emits_events_and_tracks_velocity.1.json
contracts/cross_chain_handler/: Cargo.toml
contracts/external_data_oracle/: Cargo.toml
contracts/external_data_oracle/src/: lib.rs  test.rs
contracts/external_data_oracle/test_snapshots/test/: logistics_feed_quorum_validation.1.json  numeric_feed_median_validation.1.json
contracts/interest_rate_registry/: Cargo.toml
contracts/interest_rate_registry/src/: lib.rs  test.rs
contracts/nft_factory/: Cargo.toml
contracts/nft_factory/src/: lib.rs  test.rs
contracts/parameter_registry/: Cargo.toml
contracts/parameter_registry/src/: lib.rs  test.rs
contracts/poller_reputation_queue/: Cargo.toml
contracts/poller_reputation_queue/src/: lib.rs  test.rs
contracts/prediction_market/: Cargo.toml
contracts/prediction_market/src/: lib.rs  test.rs
contracts/prediction_market/test_snapshots/test/: test_bet_after_settle_panics.1.json  test_cancel_market_full_refund.1.json  test_claim_losing_side_panics.1.json  test_double_claim_panics.1.json  test_double_init_panics.1.json  test_invalid_outcome_panics.1.json  test_multiple_bets_same_bettor_same_outcome.1.json  test_parimutuel_payout_split.1.json  test_place_bet_and_settle_winner_takes_all.1.json
contracts/reward_indexer/: Cargo.toml
contracts/reward_indexer/src/: lib.rs  test.rs
contracts/social_recovery/: Cargo.toml
contracts/social_recovery/src/: lib.rs  test.rs
contracts/staking/src/: lib.rs  test.rs
contracts/zk_event_filter/: Cargo.toml
contracts/zk_event_filter/src/: lib.rs  test.rs
contracts/zk_event_filter/tests/: integration_test.rs
docs/: PAGERDUTY_INTEGRATION.md  auth0_sso.md  burnable_token.md  cross_chain_handler.md  dlq.md  elk-stack-logging.md  execution-log-timescaledb.md  external_data_oracle.md  health_checks.md  interest_rate_registry.md  kill_switch.md  load-testing.md  observability.md  parameter_registry.md  poller_reputation_queue.md  queue_scaling.md  reward_indexer.md  secret-rotation.md  security_compliance.md  slack_app_integration.md  slack_integration_guide.md  social_recovery.md  workflow-state-machine.md  workflows.md  zk-event-filter.md
load-tests/: docker-compose.yml
(+106 files in other folders)
