[workspace]
resolver = "2"
members = [
    "airdrop",
    "amm_pool",
    "boilerplate",
    "bonding_curve",
    "cross_chain_handler",
    "dao_governance",
    "emitter_registry",
    "escrow",
    "event_proxy",
    "flash_loan",
    "gas_estimator",
    "interest_rate_registry",
    "lending_base",
    "multisig_wallet",
    "nft_factory",
    "poller_reputation_queue",
    "prediction_market",
    "prediction_resolution_engine",
    "reward_indexer",
    "royalty_registry",
    "soulbound_badge",
    "staking",
    "strategy_optimizer",
    "subscriptions",
    "token_vesting",
    "upgrade_manager",
    "yield_vault",
]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
panic = "abort"
incremental = false
codegen-units = 1
lto = true
